# libplugintercept

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  debug.sh
example/common/: dispatch.cpp  dispatch.hpp  op_params.cpp  op_params.hpp
example/common/debugger/: breakpoint.pl  breakpoint_gcnasm.pl  dbg_clang_wrapper.sh  vadd_debug.sh
example/gfx9/: fp32_v_add.cpp  fp32_v_add.s
src/: CMakeLists.txt  CodeObject.cpp  CodeObject.hpp  CodeObjectManager.cpp  CodeObjectManager.hpp  CodeObjectSwapper.cpp  CodeObjectSwapper.hpp  DebugAgent.cpp  DebugAgent.hpp  buffer.hpp  buffer_allocation.hpp  buffer_allocator.cpp  buffer_allocator.hpp  buffer_manager.cpp  buffer_manager.hpp  code_object.cpp  code_object.hpp  code_object_loader.cpp  code_object_loader.hpp  code_object_recorder.cpp  code_object_recorder.hpp  code_object_substitute.hpp  code_object_substitutor.cpp  code_object_substitutor.hpp  code_object_swap.hpp  code_object_swapper.cpp  code_object_swapper.hpp  config.cpp  config.hpp  debug_agent.cpp  debug_agent.hpp  debug_buffer.cpp  debug_buffer.hpp  external_command.cpp  external_command.hpp  fs_utils.cpp  fs_utils.hpp  init.cpp  init.hpp  trap_handler.cpp  (+2 more)
src/config/: buffer.hpp  code_object_substitute.hpp  config.cpp  config.hpp  init_command.hpp  trap_handler.hpp
src/logger/: CMakeLists.txt  CodeObjectLogger.cpp  CodeObjectLogger.hpp  logger.cpp  logger.hpp
test/: CMakeLists.txt  fp32_v_add.co  kernel_runner.hpp  main.cpp
test/kernels/: CMakeLists.txt  dbg_kernel.s
test/kernels/include/: gpr_alloc.inc
tests/: CMakeLists.txt  kernel_runner.hpp  log_helper.hpp  main.cpp  test_co_manager.cpp  test_co_recorder.cpp  test_co_substitutor.cpp  test_co_swapper.cpp  test_config.cpp  test_external_command.cpp  test_integration.cpp
tests/fixtures/: breakpoint.pl  breakpoint_trap.pl  config.toml  minimal.toml  plug.toml  plug_trap.toml
tests/kernels/: CMakeLists.txt  dbg_kernel.s  trap_handler.s
